--- a/docstrings/numerical_simulation/environment_setup/aerodynamic_coefficients.yaml
+++ b/docstrings/numerical_simulation/environment_setup/aerodynamic_coefficients.yaml
@@ -221,7 +221,7 @@ functions:
         type: list[astro.aerodynamics.AerodynamicCoefficientsIndependentVariables] # [py]
       - name: constantForceCoefficient # [cpp]
         type: std::vector< aerodynamics::AerodynamicCoefficientsIndependentVariables > # [cpp]
-        description: "Values of indepependent variables at which the coefficients in the input multi vector are defined (size 1)"
+        description: "Values of independent variables at which the coefficients in the input multi vector are defined (size 1)"
 
       - name: force_coefficients # [py]
         type: list[numpy.ndarray[numpy.float64[3, 1]]] # [py]
@@ -313,7 +313,7 @@ functions:
         type: list[astro.aerodynamics.AerodynamicCoefficientsIndependentVariables] # [py]
       - name: constantForceCoefficient # [cpp]
         type: std::vector< aerodynamics::AerodynamicCoefficientsIndependentVariables > # [cpp]
-        description: "Values of indepependent variables at which the coefficients in the input multi vector are defined (size 1)"
+        description: "Values of independent variables at which the coefficients in the input multi vector are defined (size 1)"
 
       - name: force_coefficients # [py]
         type: list[numpy.ndarray[numpy.float64[3, 1]]] # [py]
