Starting to document MGA-DSM

--- a/docstrings/__package__.yaml
+++ b/docstrings/__package__.yaml
@@ -14,5 +14,6 @@ modules:
   - astro
   - interface
   - numerical_simulation
+  - trajectory_design
   - plotting      # [py]
   - util          # [py]
