Working on MGA-DSM. Small correction of keyword from propagator setup

--- a/docstrings/numerical_simulation/propagation_setup/propagator.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/propagator.yaml
@@ -248,7 +248,7 @@ classes:
     extendend_summary: |
        `SingleArcPropagatorSettings`-derived class to define settings for propagation of multiple quantities.
 
-    attributes:
+    properties:
     - name: propagator_settings_per_type # [py]
       type: dict[IntegratedStateType, list[SingleArcPropagatorSettings]] # [py]
 
