--- a/docstrings/numerical_simulation/propagation_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/__package__.yaml
@@ -93,61 +93,6 @@ functions:
          acceleration_models = propagation_setup.create_acceleration_models( # [py]
              bodies, acceleration_settings,  bodies_to_propagate, central_bodies) # [py]
 
-      When propagating multiple bodies, the same list of settings may be re-used for multiple bodies. Below,
-      an example is given for the definition of ``acceleration_settings`` for multiple bodies (``Vehicle1`` and
-      ``Vehicle2``) which are undergoing identical accelerations:
-
-      .. code-block:: python # [py]
-         # [py]
-         # Define bodies that are propagated # [py]
-         bodies_to_propagate = ["Vehicle1", "Vehicle2"] # [py]
-         # [py]
-         # Define central bodies # [py]
-         central_bodies = ["Earth", "Earth"] # [py]
-         # [py]
-         # Define accelerations acting on both vehicles # [py]
-         accelerations_settings_vehicle = dict( # [py]
-             Sun=[propagation_setup.acceleration.point_mass_gravity()], # [py]
-             Moon=[propagation_setup.acceleration.point_mass_gravity()], # [py]
-             Earth=[propagation_setup.acceleration.spherical_harmonic_gravity(5, 5), # [py]
-                    propagation_setup.acceleration.aerodynamic()] # [py]
-         ) # [py]
-         # [py]
-         # Create global accelerations settings dictionary # [py]
-         acceleration_settings = {"Vehicle1": accelerations_settings_delfi_c3, # [py]
-                                  "Vehicle2": accelerations_settings_delfi_c3} # [py]
-         # Create acceleration models # [py]
-         acceleration_models = propagation_setup.create_acceleration_models( # [py]
-             bodies, acceleration_settings,  bodies_to_propagate, central_bodies) # [py]
-
-      Alternatively, separate acceleration settings may be defined for separate bodies and then combined into an
-      ``acceleration_settings`` variable. Below, an example for such a case is given when propagating the Earth and Moon:
-
-      .. code-block:: python # [py]
-        # [py]
-        # Define bodies that are propagated # [py]
-        bodies_to_propagate = ["Earth", "Moon"] # [py]
-        # [py]
-        # Define central bodies # [py]
-        central_bodies = ["Sun", "Sun"] # [py]
-        # Define accelerations acting on the Moon # [py]
-        accelerations_settings_moon = dict( # [py]
-            Sun=[propagation_setup.acceleration.point_mass_gravity()], # [py]
-            Earth=[propagation_setup.acceleration.point_mass_gravity()] # [py]
-            ) # [py]
-        # [py]
-        # Define accelerations acting on the Earth # [py]
-        accelerations_settings_earth = dict( # [py]
-            Sun=[propagation_setup.acceleration.point_mass_gravity()], # [py]
-            Moon=[propagation_setup.acceleration.point_mass_gravity()] # [py]
-            ) # [py]
-        # [py]
-        # Create global accelerations settings dictionary
-        acceleration_settings = {
-            "Moon": accelerations_settings_moon,
-            "Earth": accelerations_settings_earth
-        }
-
 
   - name: createTorqueModelsMap # [cpp]
   - name: create_torque_models # [py]
@@ -183,6 +128,44 @@ functions:
         type: TorqueModelMap # [py]
         description: Set of torques acting on the bodies to propagate, provided as dual key-value container, similar
                      to the torque settings input, but now with ``TorqueModel`` lists as inner value
+
+    examples: |
+
+      In this example, the following torques are exerted on the vehicle: spherical-harmonic gravitational torque
+      (up to order 4 and degree 4) and aerodynamic torque exerted by the Earth, second-degree gravitational torque
+      exerted by the Sun and the Moon.
+      The variable ``torques_settings_vehicle`` denotes the list of bodies exerting torques and the types of
+      torques, while the variable ``torque_settings`` associates this list with the body undergoing the
+      torque.
+
+      .. code-block:: python
+
+        # Define bodies that are propagated
+        bodies_to_propagate = ["Vehicle"]
+
+        # Define torques per each exerting body
+        torque_settings_vehicle = dict(
+            Sun=
+            [
+                propagation_setup.torque.second_degree_gravitational()
+            ],
+            Moon=
+            [
+                propagation_setup.torque.second_degree_gravitational()
+            ],
+            Earth=
+            [
+                propagation_setup.torque.spherical_harmonic_gravitational(4, 4),
+                propagation_setup.torque.aerodynamic()
+            ]
+        )
+
+        # Create global torque settings dictionary
+        torque_settings = {"Vehicle": torque_settings_vehicle}
+
+        # Create torque models
+        torque_models = propagation_setup.create_torque_models(
+            bodies, torque_settings,  bodies_to_propagate )
 
 
   - name: createMassRateModelsMap # [cpp]
